Issue number: Obtained from: Submitted by: Reviewed by:
Issue 1227 - Dropdowns are misaligned in property sheets


The main issue here doesn't have anything to do with property sheet. I added
some offset to the listbox and dropdown selectors to add some space as per
a previously reported bug.

I moved the offset to the required image selector which provides the
added space when it is rendered.

Curiously I didn't see the same behavior for "listbox" which should have been
the case. As it happens I negelected to implement "_getLabelOnTopClassName"
in "listbox.js", as part of the interface to "labeledBase.js".

svn path=/trunk/; revision=1374


Former-commit-id: f4c8c7f2f9e47e817402860641247c1465a9e1d3

--- a/themes/src/suntheme/css/layout.css
+++ b/themes/src/suntheme/css/layout.css
@@ -509,17 +509,33 @@ body.HlpBdy@THEME_CSS@ h2, body.HlpBdy@THEME_CSS@ h3, body.HlpBdy@THEME_CSS@ h4,
 /*---*/
 
 /* LISTS */
+/* Remove the border from around the span that contains dropdown
+   and select elements. When this element's class attribute contains
+   any of the "Lst" or "Mnu" selectors it gets the "border-widget: 1px"
+   appearance. It is only seen when the select element does not 
+   "sit ontop of the span". For example if the span has padding
+   offsets the span's border will be seen.
+*/
+span.Lst@THEME_CSS@,
+span.DrpDn@THEME_CSS@ {
+   border: none;
+}
+
 .Lst@THEME_CSS@, .LstDis@THEME_CSS@, .LstMno@THEME_CSS@, .LstMnoDis@THEME_CSS@ {
 	border-width:1px;
 	border-style:solid;
 }
 .LstAln@THEME_CSS@ {
 	vertical-align:top;
-	padding-right:5px;
 } 
 /* This is required for correct alignment on safari and
  * makes the look consistent across browsers.
  */
+span.LstBx@THEME_CSS@,
+span.DrpDn@THEME_CSS@ {
+    border:none;
+}
+
 .LstBx@THEME_CSS@ span,
 .DrpDn@THEME_CSS@ span {
     vertical-align: top;
@@ -530,11 +546,12 @@ body.HlpBdy@THEME_CSS@ h2, body.HlpBdy@THEME_CSS@ h3, body.HlpBdy@THEME_CSS@ h4,
 .LstBx@THEME_CSS@  img.LblReqImg@THEME_CSS@,
 .DrpDn@THEME_CSS@ img.LblReqImg@THEME_CSS@ {
     vertical-align: top;
-    margin-left: .25em
+    margin-left: .25em;
+    margin-right: .5em;
 }
 
 .LstBx@THEME_CSS@  img.LblInvImg@THEME_CSS@,
-.DrpDn@THEME_CSS@ img.LblReqImg@THEME_CSS@ {
+.DrpDn@THEME_CSS@ img.LblInvImg@THEME_CSS@ {
     vertical-align: top;
     margin-right: .25em;
 }
